<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="anaptuksh.skyvalos.gkountas.NmapAndroid.ResultsFragment">


    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_button"
        android:id="@+id/button7"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:typeface="serif"
        android:textStyle="bold|italic"
        android:layout_above="@+id/listView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hash"
        android:id="@+id/textView8"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:typeface="serif"
        android:textStyle="bold"
        android:textColor="#c05a5a"
        android:layout_alignBottom="@+id/editText8" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText8"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView8"
        android:layout_toLeftOf="@+id/button7"
        android:layout_toStartOf="@+id/button7"
        android:typeface="serif"
        android:textStyle="italic"
        android:inputType="numberSigned" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/last"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:typeface="serif"
        android:textColor="#c05a5a"
        android:layout_alignBottom="@+id/editText9" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText9"
        android:layout_below="@+id/editText8"
        android:layout_toRightOf="@+id/textView9"
        android:typeface="serif"
        android:textStyle="italic"
        android:layout_alignRight="@+id/editText8"
        android:layout_alignEnd="@+id/editText8"
        android:inputType="number" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView5"
        android:layout_below="@+id/textView9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
