<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c0feff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/login_layout"
        android:background="#c0feff">

        <android.support.v7.widget.Toolbar
            android:id="@+id/log_my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:background="#2cbccc"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginact_register_button"
            android:id="@+id/log_register_button"
            android:typeface="serif"
            android:textStyle="bold|italic"
            android:background="#2cbccc"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/log_login_button"
            android:layout_alignRight="@+id/log_login_button"
            android:layout_alignEnd="@+id/log_login_button"
            android:layout_alignLeft="@+id/log_login_button"
            android:layout_alignStart="@+id/log_login_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginact_login_button"
            android:id="@+id/log_login_button"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/editText5"
            android:textStyle="bold|italic"
            android:typeface="serif"
            android:background="#2cbccc"
            android:layout_alignRight="@+id/editText5"
            android:layout_alignEnd="@+id/editText5"
            android:layout_alignLeft="@+id/editText5"
            android:layout_alignStart="@+id/editText5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/loginact_username_textView"
            android:id="@+id/textView5"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:typeface="serif"
            android:layout_below="@+id/log_my_toolbar"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText4"
            android:layout_below="@+id/textView5"
            android:layout_alignRight="@+id/editText5"
            android:layout_alignEnd="@+id/editText5"
            android:layout_alignLeft="@+id/editText5"
            android:layout_alignStart="@+id/editText5"
            android:inputType="none"
            android:typeface="serif"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/loginact_password_textView"
            android:id="@+id/textView6"
            android:layout_below="@+id/editText4"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:typeface="serif" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText5"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:typeface="serif"
            android:textStyle="italic" />

    </RelativeLayout>

</ScrollView>